--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <h1>Tic Tac Toe</h1>
+    </header>
+    <main>
+        <div id="game-grid" class="game"></div>
+        <div id="scoreboard" class="scoreboard">
+            <div class="player1"></div>
+            <div class="player2"></div>
+        </div>
+
+    </main>
+    <footer class="footer">
+        <p>
+            Copyright &copy;
+            <script>
+                document.write(new Date().getFullYear());
+            </script>
+            Scott Starks
+        </p> 
+        <a href="https://github.com/thetramp22" target="_blank">
+            <i class="fa-brands fa-github"></i>
+        </a>
+    </footer>
 </body>
 </html>
