added html for names modal
modal needs styling and scripting

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
         <h1>Tic Tac Toe</h1>
     </header>
     <main>
-        <div id="game-grid" class="game"></div>
-        <div id="scoreboard" class="scoreboard">
-            <div class="player1"></div>
-            <div class="player2"></div>
-        </div>
-
+        <div id="game-grid" class="game"></div>        
     </main>
     <footer class="footer">
         <p>
@@ -35,5 +30,14 @@
             <i class="fa-brands fa-github"></i>
         </a>
     </footer>
+    <div class="modal">
+        <form action="" class="form">
+            <label for="playerX">Enter name for Player X</label>
+            <input id="playerX" name="playerX" type="text" placeholder="Player X" />
+            <label for="playerO">Enter name for Player O</label>
+            <input id="playerO" name="playerO" type="text" placeholder="Player O" />
+            <button type="submit" id="play-btn" class="btn play">Play Game</button>
+        </form>
+    </div>
 </body>
 </html>
